Minor fixes
1. Correctly reports the version of running java commands, even when there's a space in the path
2. Prints 'Safari' when appropriate
3. Commented the two above
4. Removed old “dirt” (uncommented stuff from previous versions)